fix: position fixed - fix horizontal scroll

--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -95,7 +95,7 @@ a{
 .nav-grid{
     display: grid;
     grid-template-columns: max-content 1fr max-content;
-    
+
     font-family: var(--second-family);
     font-weight: 400;
     font-size: 15px;
@@ -213,7 +213,7 @@ a{
     grid-template-columns: min-content min-content;
     gap: 120px;
     justify-content: center;
-    
+
     padding: 80px 40px 96px 41px;
 }
 
@@ -276,8 +276,8 @@ a{
     justify-content: center;
     align-items: baseline;
     column-gap: 45px;
-    // row-gap: 28px;   
-    
+    // row-gap: 28px;
+
     border-radius: 9px;
     padding: 30px 35px;
 
@@ -298,7 +298,7 @@ a{
 
                 // position: relative;
                 // overflow: hidden;
-                
+
                 &>.our-friends-slider-card{
                     display: flex;
                     flex-direction: column;
@@ -306,12 +306,12 @@ a{
                     border-radius: 9px;
                     row-gap: 29px;
                     background: var(--color-light-s);
-            
+
                     &>img{
                         width: 270px;
                         height: 270px;
                     }
-            
+
                     padding-bottom: 30px;
                 }
 
@@ -328,7 +328,7 @@ a{
 }
 
 .our-friends-slider-card:hover{
-    
+
     box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
     background-color: var(--color-light-xl);
 
@@ -987,7 +987,7 @@ footer{
 
     .nav-menu{
         background-color: var(--color-dark-3xl);
-        position: absolute;
+        position: fixed;
         right: -320px;
         top: 0;
         width: 320px;
@@ -1217,7 +1217,7 @@ footer{
         &>div>div{
             line-height: 110%;
         }
-        
+
         &>div>img{
             width: 50px;
             height: 50px;
@@ -1426,7 +1426,7 @@ footer{
     top: -50px;
 
     cursor: pointer;
-    transition: 0.3s;   
+    transition: 0.3s;
 }
 
 .popup-btn-close:hover{
@@ -1517,14 +1517,14 @@ footer{
         }
 
         &>.description-pet{
-            padding: clamp(0.625rem, -3.2828rem + 8.016vw, 3.125rem) 
+            padding: clamp(0.625rem, -3.2828rem + 8.016vw, 3.125rem)
             9px 10px 11px;
-    
+
             &>.description{
                 font-size: clamp(0.8125rem, 0.6037rem + 0.4175vw, 0.9375rem);
                 padding-block: clamp(1.25rem, -0.8993rem + 4.4088vw, 2.625rem);
             }
-            
+
             &>ul {
                 gap: clamp(0.6875rem, 1.176rem + -1.002vw, 0.375rem);
             }
@@ -1548,7 +1548,7 @@ footer{
                 font-size: 13px;
                 padding-block: 20px;
             }
-    
+
             &>ul {
                 gap: 6px;
             }
